$Id$

Version 1.2.5 (?? Feb 2012)
  - Patch 3488543: Fix XSS vulnerabilities to location variable to event edit
    page.

Version 1.2.4 (08 Aug 2011)
 - Don't display program version as HTML comment unless user is an admin.
 - Fixed XSS vulnerability: malicious javascript in event descriptions submitted
   by public can do bad things (create admin account, delete events, etc.)
   when the pending event is viewed by the admin.
 - Fixed bug [ 3307633 ] Non-static method Doc::attachmentsEnabled
 - Fixed bug [ 3131543 ]Time is not displayed correctly when min = 0
 - Fixed bug [ 3136643 ] php error when trying to log with wrong password. postgresql
 - Fixed pass by reference warnings when running PHP 5.3
 - Fixed bug [ 3289986 ] Deprecated: Function ereg_replace() is deprecated
 - Fixed bug [ 3095745 ] Invalid table structure for MS SQL
 - Fixed bug [ 3061175 ] Search: Warning: Invalid argument supplied for foreach()
 - Bug fix: undefined function date_default_timezone_set in older versions
   of PHP.
Version 1.2.3 (14 Aug 2010)
 - Include backtrace in fatal errors if set to development mode
 - Fixed bug: could not save events with more than one category

Version 1.2.2 (14 Aug 2010)
 - Patch [ 3017187 ] Changed text for better translation into Japanese
 - Fixes for PHP warnings about default timezone not being set.

Version 1.2.1 (09 Apr 2010)
 - Added better error message for unlink error in db_cachedir.
 - Fixed bug [ 2769084 ] xss vulnerability with cat_id in month.php
 - Security Fix: Fixes for cross-site scripting and denial of service.  For
   details of issues:
   http://tasecuritygroup.com/download/SCL-2010-001.txt
 - Removed CSS "overflow:auto" setting for month table cells since it was
   causing unnecessary scrollbars in Chrome.
 - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
 - Patch [ 2261885 ] Missing shebang
 - Patch [ 2261841 ] Fix timebar views
 - Fixed bug: The remember login checkbox on login page would not work