@@ -19,23 +19,17 @@ define ( '__WC_BASEDIR', '..' ); // Points to the base WebCalendar directory
                           // relative to current working directory.
 define ( '__WC_INCLUDEDIR', '../includes' );
 
-  include_once __WC_INCLUDEDIR . '/translate.php';
-  require_once __WC_INCLUDEDIR . '/classes/WebCalendar.class';
-  require_once __WC_INCLUDEDIR . '/classes/Event.class';
-  require_once __WC_INCLUDEDIR . '/classes/RptEvent.class';
+  foreach(array('access', 'config', 'dbi4php', 'formvars', 'functions',
+		'site_extras', 'translate', 'validate') as $i)
+    include_once __WC_INCLUDEDIR . '/' . $i . '.php';
+
+  foreach(array('WebCalendar', 'Event', 'RptEvent') as $i)
+    include_once __WC_INCLUDEDIR . '/classes/' . $i . '.class';
 
   $WebCalendar = new WebCalendar ( __FILE__ );
-
-  include_once __WC_INCLUDEDIR . '/config.php';
-  include_once __WC_INCLUDEDIR . '/dbi4php.php';
-  include_once __WC_INCLUDEDIR . '/access.php';
-  include_once __WC_INCLUDEDIR . '/functions.php';
-
   $WebCalendar->initializeFirstPhase ();
 
   include_once __WC_INCLUDEDIR . '/' . $user_inc;
-  include_once __WC_INCLUDEDIR . '/validate.php';
-  include_once __WC_INCLUDEDIR . '/site_extras.php';
 
   $WebCalendar->initializeSecondPhase ();
 
